--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <!-- Primary Meta Tags -->
-  <title>Openimport</title>
+  <title>RYAL-POS</title>
   <meta name="title" content="OPENIMPORT ">
   <meta name="description" content="Importadora">
 
@@ -37,7 +37,7 @@
     <link rel="stylesheet" href="assets/assetsryal/css/remixicon.min.css">
     <link rel="stylesheet" href="assets/assetsryal/vendors/swiper/swiper-bundle.min.css">
     <link rel="stylesheet" href="assets/assetsryal/vendors/zuck_stories/zuck.min.css">
-    <link rel="manifest" href="_manifest.json" />
+    <!-- <link rel="manifest" href="_manifest.json" /> -->
    
 </head>
 <body id="body">
