--- a/src/index.html
+++ b/src/index.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="utf-8">
   <!-- Primary Meta Tags -->
-  <title>RYAL-POS</title>
-  <meta name="title" content="OPENIMPORT ">
-  <meta name="description" content="Importadora">
+  <title>Ryal-POS</title>
+  <meta name="title" content="Ryal POS ">
+  <meta name="description" content="Aministrador de baerberia y salon de belleza">
 
   <!-- Open Graph / Facebook -->
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://www.openimportec.com/">
-  <meta property="og:title" content="Importadora">
-  <meta property="og:description" content="Importadora">
+  <meta property="og:type" content="webapp">
+  <meta property="og:url" content="https://wwww.buckapi.us/">
+  <meta property="og:title" content="Ryal POS">
+  <meta property="og:description" content="Aministrador de baerberia y salon de belleza">
   <meta property="og:image" content="">
 
 
