--- a/src/index.html
+++ b/src/index.html
@@ -5,13 +5,13 @@
   <!-- Primary Meta Tags -->
   <title>Ryal-POS</title>
   <meta name="title" content="Ryal POS ">
-  <meta name="description" content="Aministrador de baerberia y salon de belleza">
+  <meta name="description" content="Aministrador de barberia y salon de belleza">
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="webapp">
   <meta property="og:url" content="https://wwww.buckapi.us/">
   <meta property="og:title" content="Ryal POS">
-  <meta property="og:description" content="Aministrador de baerberia y salon de belleza">
+  <meta property="og:description" content="Aministrador de barberia y salon de belleza">
   <meta property="og:image" content="">
 
 
