--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   <meta property="og:url" content="https://wwww.buckapi.us/">
   <meta property="og:title" content="Ryal POS">
   <meta property="og:description" content="Aministrador de barberia y salon de belleza">
-  <meta property="og:image" content="">
+  <meta property="og:image" content="https://ryalpos.buckapi.us/assets/assetsryal/og.jpg">
 
 
   <base href="/">
